# hug

shoebox/: factorial1.qml  shoe.bat  shoebox.cabal  shoebox.qml  stack.yaml
shoebox/data/: frz.sbx
shoebox/jquery-ui/: jquery-ui.css  jquery-ui.min.css  jquery-ui.min.js  jquery-ui.theme.css  jquery-ui.theme.min.css
shoebox/lib/Shoebox/: Data.hs  Parser.hs
shoebox/main/: GUI.hs  Main.hs
shoebox/src/: GUI.hs  RESTFulServer.hs  UI.hs
