name:                shoebox
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:        LICENSE
author:              Frankfurt HUG
-- maintainer:
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Shoebox.Parser, Shoebox.Data, Shoebox.Basics
  build-depends:       base >=4.8 && <4.9
                     , containers
                     , text
                     , parsec
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable shoe
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , shoebox
                     , text
                     , yesod
                     , aeson
  other-modules:       GUI
  hs-source-dirs:      main
  default-language:    Haskell2010
  ghc-options:         -threaded

test-suite specs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       containers,
                       shoebox,
                       hspec,
                       QuickCheck
  other-modules:       ShoeboxSpec, ShoeboxSampleDatabase
  default-language:    Haskell2010
